Fixed overflow error with charts

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -14,3 +14,9 @@ button {
 button:disabled{
     cursor: default;
 }
+
+.charts{
+    display: flex;
+    justify-content: center;
+    // width: 72rem;
+}
